--- a/Ciências de dados/index.html
+++ b/Ciências de dados/index.html
@@ -22,5 +22,6 @@
     <footer>
         <p>Desenvolvido por Vitor Pizolato</p>
     </footer>
+    <script type="module" src="graficos/informaçõesGlobais"></script>
 </body>
 </html>
